feat(handlers): implementation of handlers and stuff fixing
